Fix: Staking Layout changes 2 (#62)
* feat: revert 691268e to only apply new Footer on the Stake/WelcomePage

* feat(bs-74): update Footer's telegram link

* fix: set max-width for TooltipValue due to modal out of bounds

* fix: eth icon & layout of stake compounder differences from design

* fix: add white space between some Tooltip text

* fix: add hypens for some tooltips & replace work-break: break-all with word-break

* refactor: https://github.com/Rock-n-Block/bitgear-frontend/pull/55/files#diff-86687d75362e61e7d93ece1568fc8c6bd6f5f2321156795b05a8d9f09d9a5382L49

* refactor: remove useless comments due to https://github.com/Rock-n-Block/bitgear-frontend/pull/55#discussion_r887692584

* fix(swap): wrong regularFee & reducedFee applied to swap

* feat(staking): replace SectionHead stake text for LP & regular GEAR

* fix(swap): input onChange event & wrong setting search value in DropdownItems on Market page

* fix: earned to date on Stake tooltip NaN

--- a/src/pages/PageLogin/style.module.scss
+++ b/src/pages/PageLogin/style.module.scss
@@ -16,7 +16,7 @@
   @include flex(row, center, center, nowrap);
 
   .container {
-    padding: 100px 10px 100px;
+    padding: 100px 10px 170px;
 
     width: 100%;
     max-width: 1100px;
