--- a/src/scss/components/_tooltip.scss
+++ b/src/scss/components/_tooltip.scss
@@ -3,4 +3,6 @@
   font-size: 12px;
   line-height: 19px;
   color: $color-white-semi-80;
+  hyphens: auto;
+  word-break: normal;
 }
